Fix issue #2224
Instead of manually maintaing the list of depending modules, it would be better to execute `jdeps` as part of a suitable gradle task.